# 2021_TR

./: .gitignore  README.md
ex1-coureurs/: CMakeLists.txt
ex1-coureurs/include/: barrier.h
ex1-coureurs/src/: barrier.c  main.c
ex1-coureurs/tests/: ex1-coureurs.tex
ex1bis-coureurs/: CMakeLists.txt
ex1bis-coureurs/include/: barrier_monitor.h
ex1bis-coureurs/src/: barrier_monitor.c  main.c
ex2-producteurs-consommateurs/: CMakeLists.txt
ex2-producteurs-consommateurs/include/: fifo.h  prodcon.h
ex2-producteurs-consommateurs/src/: fifo.c  prodcon.c
ex2-producteurs-consommateurs/tests/: ex2-producteurs-consommateurs.tex
ex2bis-producteurs-consommateurs/: CMakeLists.txt
ex2bis-producteurs-consommateurs/include/: fifo_monitor.h
ex2bis-producteurs-consommateurs/src/: fifo_monitor.c  prodcon.c
ex3-lecteurs-ecrivains/: CMakeLists.txt  tests.sh
ex3-lecteurs-ecrivains/include/: data.h  lightswitch.h  read_thead.h  reader_writer.h  reader_writer_priority.h  statistics.h  write_thread.h
ex3-lecteurs-ecrivains/src/: data.c  lightswitch.c  main.c  read_thread.c  reader_writer.c  reader_writer_priority.c  statistics.c  write_thread.c
ex3-lecteurs-ecrivains/tests/: ex3-lecteurs-ecrivains.tex
ex5-lecteurs-ecrivains-nice/: CMakeLists.txt
ex5-lecteurs-ecrivains-nice/include/: data.h  read_thead.h  write_thread.h
ex5-lecteurs-ecrivains-nice/src/: data.c  lightswitch.c  main.c  read_thread.c  reader_writer.c  write_thread.c
example/src/: main.c
example1/: Makefile
example2-nice/: Makefile  exemple-nice-threads.c  exemple-taux-cpu.c
laba-readers-writers-nice/: CMakeLists.txt  tests.sh
laba-readers-writers-nice/include/: read_thead.h  statistics.h  write_thread.h
laba-readers-writers-nice/src/: data.c  main.c  read_thread.c  reader_writer.c  write_thread.c
labb-readers-writers-priority/: CMakeLists.txt  tests.sh
labb-readers-writers-priority/include/: lightswitch.h  (+3 more)
labos/: Laura BINACCHI - Carnet de Laboratoire.docx
(+9 files in other folders)
